# Lexora

./: .dockerignore  .gitignore  README.en.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/buddy/src-tauri/: Cargo.toml  tauri.conf.json
apps/buddy/src-tauri/builtin-skills/lexora-buddy-animation/: SKILL.md
apps/buddy/src-tauri/capabilities/: buddy-windows.json
apps/buddy/src-tauri/skills/_builtin/: SKILL.md
apps/buddy/src-tauri/skills/lexora-buddy-animation/: SKILL.md
apps/buddy/src-tauri/src/: app_config.rs  codex_smoke.rs  context_pack.rs  desktop_shell.rs  domain.rs  health_check.rs  intent.rs  lib.rs  linux_webview.rs  main.rs  window_smoke.rs
apps/buddy/src-tauri/src/agents/: claude.rs  codex.rs  mod.rs  redaction.rs  runtime_diagnostics.rs  subprocess_env.rs  usage.rs
apps/buddy/src-tauri/src/app_paths/: mod.rs
apps/buddy/src-tauri/src/commands/: agent_turn.rs  approval.rs  attachment.rs  chat_input.rs  codex_runtime.rs  host_action.rs  mod.rs  run_events.rs  run_state.rs  runtime_events.rs
apps/buddy/src-tauri/src/error/: mod.rs
apps/buddy/src-tauri/src/local_log/: mod.rs  path.rs  runtime.rs  writer.rs
apps/buddy/src-tauri/src/memory/: candidates.rs  mod.rs  workspace.rs
apps/buddy/src-tauri/src/native_pet/: animation.rs  assets.rs  bounds.rs  control_runtime.rs  control_state.rs  coordinates.rs  dpi.rs  drag_motion.rs  drag_replay.rs  drag_runtime.rs  drag_state.rs  edge_runout.rs  frame_timing.rs  geometry.rs  layer_shell.rs  lifecycle.rs  mod.rs  monitor_layout.rs  physics.rs  physics_params.rs  (+11 more)
(+1467 files in other folders)
