[package]
name = "lexora-buddy"
version = "0.1.0"
description = "Lexora desktop agent companion"
authors = [ "Lexora" ]
edition = "2021"

[lib]
name = "lexora_buddy_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
cairo-rs = "0.18"
gdk = "0.18"
gdk-pixbuf = "0.18"
glib = "0.18"
gtk = "0.18"
libc = "0.2"
libloading = "0.7"
rusqlite = { version = "0.37", features = [ "bundled" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = [ "tray-icon" ] }
thiserror = "2"
uuid = { version = "1", features = [ "v4" ] }
